--- a/index.html
+++ b/index.html
@@ -3002,8 +3002,8 @@ body {
 			
 		
 
-		<iframe src="ssstik.io_1720256860149.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-		</iframe> 
+		<audio> src="ssstik.io_1720256860149.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+		</audio>
     <br><br><br><br><br>
 		 
 		<div class="book_wrapper">
