--- a/index.html
+++ b/index.html
@@ -3002,7 +3002,7 @@ body {
 			
 		
 
-		<audio> src="ssstik.io_1720256860149.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+		<audio> src="ssstik.io_1720256860149.mp3" allow="autoplay"  id="iframeAudio">
 		</audio>
     <br><br><br><br><br>
 		 
