--- a/index.html
+++ b/index.html
@@ -3002,8 +3002,12 @@ body {
 			
 		
 
-		<audio> src="ssstik.io_1720256860149.mp3" allow="autoplay"  id="iframeAudio">
-		</audio>
+      <audio controls autoplay>
+        <source src="ssstik.io_1720256860149.mp3" type="audio/ogg">
+        <source src=
+      "ssstik.io_1720256860149.mp3"
+                type="audio/mpeg">
+    </audio>
     <br><br><br><br><br>
 		 
 		<div class="book_wrapper">
